# ChangeLog for sys-kernel/git-sources
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.478 2009/03/10 00:29:35 mpagano Exp $

*git-sources-2.6.29_rc7-r3 (10 Mar 2009)

  10 Mar 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.29_rc7-r3.ebuild:
  Version bump

*git-sources-2.6.29_rc7-r2 (09 Mar 2009)

  09 Mar 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.29_rc7-r2.ebuild:
  Version bump and old version cleanup

*git-sources-2.6.29_rc7-r1 (05 Mar 2009)

  05 Mar 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.29_rc7-r1.ebuild:
  Version bump

*git-sources-2.6.29_rc6-r7 (03 Mar 2009)

  03 Mar 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.29_rc6-r7.ebuild:
  Version bump

*git-sources-2.6.29_rc6-r6 (03 Mar 2009)

  03 Mar 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.29_rc6-r6.ebuild:
  Version bump

*git-sources-2.6.29_rc6-r5 (28 Feb 2009)

  28 Feb 2009; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.29_rc6-r5.ebuild:
  Version bump

*git-sources-2.6.29_rc6-r4 (27 Feb 2009)

  27 Feb 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.29_rc6-r4.ebuild:
  Version bump

*git-sources-2.6.29_rc6-r3 (26 Feb 2009)

  26 Feb 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.29_rc6-r3.ebuild:
  Version bump

*git-sources-2.6.29_rc6-r2 (25 Feb 2009)

  25 Feb 2009; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.29_rc6-r2.ebuild:
  Version bump

*git-sources-2.6.29_rc6-r1 (24 Feb 2009)

  24 Feb 2009; Mike Pagano <mpagano@gentoo.org>
  -git-sources-2.6.29_rc4-r1.ebuild, -git-sources-2.6.29_rc4-r2.ebuild,
  -git-sources-2.6.29_rc4-r3.ebuild, -git-sources-2.6.29_rc4-r4.ebuild,
  -git-sources-2.6.29_rc4-r5.ebuild, -git-sources-2.6.29_rc4-r6.ebuild,
  -git-sources-2.6.29_rc4-r7.ebuild, +git-sources-2.6.29_rc6-r1.ebuild: