@@ -10,6 +10,7 @@ DIST patch-2.6.29-rc6.bz2 12146448 RMD160 4544ba0922fa34958b790e4ec40f39e4e2e310
 DIST patch-2.6.29-rc7-git1.bz2 727 RMD160 dabebb4c9da9c098207ded6bc40b4af6784b3a3f SHA1 cc5f5b2d3e3ca8c383d51fe8d55ab897f1bbb96f SHA256 8c5c87f8404c51376cd1b5bb8b1bd817380c1c6dade0702bbe3250800ef0749a
 DIST patch-2.6.29-rc7-git2.bz2 44137 RMD160 c549df2fb78f899db17dab831b1c9777d99aeaf5 SHA1 fb95049f58cc964306074ed637e1c61aaf756f44 SHA256 3aff5f43c17d329abeefb5851a7ee6049b289049bbbd91b7b297482c17c59336
 DIST patch-2.6.29-rc7-git3.bz2 57409 RMD160 b34ee2b0472c2209e0ce47dbbab9a0f32fbb0dfa SHA1 65d9cff11f1cd123537d6779fe59e2eb48d18c89 SHA256 25f7fc0deb878d62cac2730031e44d792663941dd1fade0cea0ac10a208e48ba
+DIST patch-2.6.29-rc7-git4.bz2 63532 RMD160 e8205b24cf95a1a47a713e07d06b28414f148df3 SHA1 dcc69dfe3c979d656db1d3b8c36e02c9aa6d2c93 SHA256 8a3706b6b06dc4e26c2e40e1de4b32424b399ba68ac748000bb2873fe13e344f
 DIST patch-2.6.29-rc7.bz2 12201683 RMD160 3045b5ad160911ba94934d8c49df52a500a0e947 SHA1 b80d76976740641a13746ab9cb2fdfb5e200e027 SHA256 b8f050a6a7b76a3dfd603d1cc8cd44ffd257d0de8acf168bc9cd1e2c0cb0db21
 EBUILD git-sources-2.6.29_rc6-r1.ebuild 1242 RMD160 e13dd5863c4fb33d4b3dcbba562c65264a622408 SHA1 52921fec1d8ecca7b137830183c8c079721ca826 SHA256 e06b2c5958bb3e67835b6d88fd2ca8de6705f41f85d2ba6a38ada5a51758f976
 EBUILD git-sources-2.6.29_rc6-r2.ebuild 1242 RMD160 7586a5f26f390fa9d1f7a5c001cff69fd81ab940 SHA1 55a0e03c8043b3d442f4dbb470f8d58b4e99bf38 SHA256 e32479631cb00b3fe48b7c9a56184440d5cdb92d7ee0a504880abbee3309657a
@@ -21,5 +22,6 @@ EBUILD git-sources-2.6.29_rc6-r7.ebuild 1242 RMD160 595b0b3c1477041a381867a9548a
 EBUILD git-sources-2.6.29_rc7-r1.ebuild 1242 RMD160 a116a620a0158142e245bd7fb2f9fef2ff277def SHA1 6714e9f605d78ff2d226bebb625a1ae507c49462 SHA256 9726a17192daf47f263e4d0380a8ee56907d3b3b3cd0b01d16bd82d0bbbbd53e
 EBUILD git-sources-2.6.29_rc7-r2.ebuild 1242 RMD160 8b8387b3929a58219e3edd0c4c3b2cace0031212 SHA1 c82dfe76c45b9f0d03131cc1ea52c63cbca79e25 SHA256 5c9eead074aa062e595826b1ccce07ec2350e750430ab2c8c65da86f601b7256
 EBUILD git-sources-2.6.29_rc7-r3.ebuild 1242 RMD160 22bc111c339e8e65e9b31eae6706d3c82e38e05c SHA1 faca7a7b549e62d0582519b8a6c46a542d86bd2e SHA256 bd5f09707b7a2e0e6d8252230df409899df44bea636e4c86ed94e97411a6c7ef
-MISC ChangeLog 91237 RMD160 135c317b7b43282bebafa43fbb8690cdfe274aec SHA1 9d2f1286db9793b008e4baaa8727f21bc24ef6b0 SHA256 16d404b728e8b9ffa4dfa6bdbd1390cbafe9d57e7c35214f725dd8f92e8f6315
+EBUILD git-sources-2.6.29_rc7-r4.ebuild 1242 RMD160 8dbcb1aa932c1b45fc6ff8c20e6c019e8012b91e SHA1 625107e22a68cc2f4187b429e454b66ecdb1e9d5 SHA256 6446e6b679c533e0b06a115f50950c3f2a8ea02816c7cbb09c443cdc6e56e851
+MISC ChangeLog 91380 RMD160 3792ff11fbfcb44707c365a01037493f7ace57d0 SHA1 e235c8a606c65244b1b425e244df6c9e181807ad SHA256 2cf8399868de564188c79130ca62d6eaa7e025ad283ec24aaf8b6d02511ebec2
 MISC metadata.xml 443 RMD160 2b491a6310ff59f0658f64be1328b983ac82a462 SHA1 a65b3e97b9088758114ce0dbb46abb15879211e0 SHA256 9232689e2d3a60e31b4b0194770e6395613a110b77bef2f4e2f98d919acbaf13
