@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.478 2009/03/10 00:29:35 mpagano Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-kernel/cvs-repo/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.479 2009/03/11 12:28:10 mpagano Exp $
+
+*git-sources-2.6.29_rc7-r4 (11 Mar 2009)
+
+  11 Mar 2009; Mike Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.29_rc7-r4.ebuild:
+  Version bump
 
 *git-sources-2.6.29_rc7-r3 (10 Mar 2009)
 
